test/expected/typedef_sti.out
typedef static int SI
        ^
9: error: "typedef static int" is illegal for built-in type
